fix image stretch on mobile

--- a/styles.css
+++ b/styles.css
@@ -125,10 +125,9 @@ nav {
 }
 
 #project-list img {
-    display: block;
     width: 100%;
     height: auto;
-    max-height: 60vmin;
+    /* max-height: 60vmin; */
 }
 
 #project-list li {
